# enpm809Y_fall2023

final_project/: CMakeLists.txt  package.xml
final_project/config/: sensors.yaml  waypoint_params.yaml
final_project/final_project/: environment_startup.py  spawn_params.py
final_project/include/final_project/: ariac_logical_camera_plugin.hpp
final_project/launch/: final_project.launch.py  spawn_turtlebot3.launch.py
final_project/maps/: final2_map.pgm  final2_map.yaml
final_project/models/aruco_marker_0/: model.sdf
final_project/models/aruco_marker_1/: model.config
final_project/models/aruco_marker_1/materials/scripts/: marker.material
final_project/models/aruco_marker_2/: model.config
final_project/models/aruco_marker_2/materials/scripts/: marker.material
final_project/models/box_pallets/: model.sdf
final_project/models/box_pallets_2/: model.sdf
final_project/models/box_pallets_3/: model.sdf
final_project/models/turtlebot3_waffle/: model.sdf
final_project/nodes/: environment_startup_node.py  object_tf_broadcaster.py  part_spawner.py  sensor_tf_broadcaster.py
final_project/src/: ariac_logical_camera_plugin.cpp  disable_shadows_plugin.cpp
final_project/worlds/: final.world
lecture1/src/: lecture1.cpp  output.txt
lecture11/: README.md
lecture11/automated_vehicle/: CMakeLists.txt  package.xml
lecture11/automated_vehicle/include/automated_vehicle/: camera.hpp
lecture11/automated_vehicle/launch/: automated_vehicle.launch.py
lecture11/automated_vehicle/src/: camera.cpp
lecture11/first_package/: CMakeLists.txt  package.xml
lecture11/first_package/include/first_package/: first_package.h  light_switcher_pub.h  light_switcher_pub_old.h  light_switcher_sub.h
lecture11/first_package/launch/: first_package.launch.py  publisher.launch.py  subscriber.launch.py
lecture11/first_package/src/: first_package.cpp  light_switcher_pub.cpp  light_switcher_pub_old.cpp  light_switcher_sub.cpp
lecture12/: CMakeLists.txt  package.xml
lecture12/include/lecture12/: broadcaster_demo.hpp  listener_demo.hpp  utils.hpp
lecture12/src/: broadcaster_demo.cpp  listener_demo.cpp  utils.cpp
lecture2/src/: lecture2  lecture2.cpp  output.txt  test.py
lecture3/src/: lecture3.cpp
lecture4/src/: lecture4  lecture4.cpp
lecture5/doc/: FancyDoxyfile
lecture5/doc/docs/html/: bug.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  globals.html  globals_func.html  graph_legend.html  index.html  lecture5_8h.html  lecture5_8h.js  lecture5_8h_source.html  navtreedata.js  navtreeindex0.js  pages.html  todo.html
lecture5/src/: lecture5  lecture5.cpp  part1.cpp  part2.cpp
lecture6/src/: lecture6.cpp
lecture7/include/: constructor1.h  constructor2.h  constructor3.h  constructor4.h  delegating_constructor.h  explicit_keyword.h  member_init_a_b_c.h  mobile_robot.h  static_attribute.h  static_method.h  this_pointer.h
lecture7/src/: main.cpp  mobile_robot.cpp
lecture7/src/constructor1/: main  main.cpp  mobile_robot.cpp
lecture7/src/constructor2/: main  main.cpp  mobile_robot.cpp
lecture7/src/constructor3/: main  main.cpp  mobile_robot.cpp
lecture7/src/constructor4/: main  main.cpp  mobile_robot.cpp
lecture7/src/delegating_constructor/: main  main.cpp  mobile_robot.cpp
lecture7/src/explicit_keyword/: main  main.cpp
lecture7/src/member_init_a_b_c/: main  main.cpp
lecture7/src/static_method_attribute/: main  main.cpp
lecture7/src/this_pointer/: main  main.cpp  mobile_robot.cpp
lecture8/include/: another_class.h  battery.h  friend_function.h  operator_overloading.h  sensor.h
lecture8/include/aggregation/: aggregation.h
lecture8/include/composition/: battery.h  composition.h
lecture8/include/constructors/: constructors.h
lecture8/include/friend_class/: another_class.h  friend_class.h
lecture8/include/friend_function/: friend_function.h
lecture8/include/inheritance/: base_derived.h  constructors.h  mobile_robot.h  virtual_destructor.h
lecture8/include/operator_overloading/: operator_overloading.h
lecture8/include/public_protected_private/: public_protected_private.h
lecture8/include/static_polymorphism/: static_polymorphism.h  vtable.h
lecture8/src/aggregation/: main  main.cpp  mobile_robot.cpp  sensor.cpp
lecture8/src/composition/: battery.cpp  main  main.cpp  mobile_robot.cpp
lecture8/src/constructors/: main.cpp
lecture8/src/friend_class/: another_class.cpp  main  main.cpp  mobile_robot.cpp
lecture8/src/friend_function/: main  main.cpp  mobile_robot.cpp
lecture8/src/inheritance/: main.cpp  mobile_robot.cpp
lecture8/src/operator_overloading/: main  main.cpp  mobile_robot.cpp
lecture8/src/public_protected_private/: main.cpp
lecture8/src/static_polymorphism/: main.cpp
mage_msgs/: CMakeLists.txt  package.xml
mage_msgs/msg/: AdvancedLogicalCameraImage.msg  MarkerArray.msg  PartPose.msg
navigation_demo/: CMakeLists.txt  package.xml
navigation_demo/include/navigation_demo/: navigation_demo.hpp
navigation_demo/src/: navigation_demo.cpp
rm1/src/: rm1  rm1.cpp
rm2/: rm2  rm2.cpp
rm2/src/: rm2.cpp
ros2_aruco/ros2_aruco/: setup.py
ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py
turtlebot3_sensors/: CMakeLists.txt  package.xml
turtlebot3_sensors/src/: ariac_logical_camera_plugin.cpp
turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  setup.cfg
turtlebot3_simulations/turtlebot3_gazebo/launch/: maze.launch.py  spawn_turtlebot3.launch.py  turtlebot3_world.launch.py
turtlebot3_simulations/turtlebot3_gazebo/map/: maze.pgm  maze.yaml
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_marker_0/: model.config  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_marker_1/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/battery/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/nodes/: part_spawner.py
turtlebot3_simulations/turtlebot3_gazebo/turtlebot3_gazebo/: spawn_params.py
turtlebot3_simulations/turtlebot3_gazebo/urdf/: turtlebot3_waffle.urdf
turtlebot3_simulations/turtlebot3_gazebo/worlds/: maze_world.world
(+21 files in other folders)
