<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lecture12</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zeidk@umd.edu">zeid</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_fake_node</depend>
  <depend>turtlebot3_simulations</depend>
  <depend>turtlebot3_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
